--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,8 +8,37 @@
           type="email"
           id="email"
           ngModel
-          name="email">
+          name="email"
+          required
+          email
+          class="form-control"
+          #email="ngModel">
+          <span class="help-block" *ngIf="!email.valid && email.touched">Please enter a valid Email!</span>
         </div>
+        <div>
+          <label for="subscription">Choose a Subscription</label>
+          <select
+          name="subscription"
+          id="subscription"
+          [ngModel]="selectedSubscription"
+          class="form-control">
+            <option
+            *ngFor = "let subscription of subscriptions"
+            [value]="subscription">{{subscription}}</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password"
+          id="password"
+          name="password"
+          ngModel
+          required
+          class="form-control"
+          #password="ngModel">
+          <span class="help-block" *ngIf="!password.valid && password.touched">Please enter a valid password!</span>
+        </div>
+        <button class="btn btn-primary" type="submit">Submit</button>
       </form>
     </div>
   </div>
