--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
-      <form>
+      <form #signupForm="ngForm" (ngSubmit)="onSubmit()">
         <div class="form-group">
           <label for="email">Mail</label>
           <input
@@ -15,6 +15,7 @@
           #email="ngModel">
           <span class="help-block" *ngIf="!email.valid && email.touched">Please enter a valid Email!</span>
         </div>
+        
         <div>
           <label for="subscription">Choose a Subscription</label>
           <select
@@ -27,6 +28,7 @@
             [value]="subscription">{{subscription}}</option>
           </select>
         </div>
+
         <div class="form-group">
           <label for="password">Password</label>
           <input type="password"
@@ -38,6 +40,7 @@
           #password="ngModel">
           <span class="help-block" *ngIf="!password.valid && password.touched">Please enter a valid password!</span>
         </div>
+        <p *ngIf="!signupForm.valid && signupForm.touched">The form is invalid!</p>
         <button class="btn btn-primary" type="submit">Submit</button>
       </form>
     </div>
